--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@line/liff": "2.27.3",
+    "dompurify": "^3.3.0",
     "marked": "^17.0.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3",
     "vite": "^5.2.0"
